[LCR-295] refactor: Collectors.toList() 매서드 정리