@@ -7,7 +7,6 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
@@ -57,7 +56,7 @@ public class PopupEventDynamoDbClient {
                                 return eventTime.compareTo(startTimeStr) >= 0
                                         && eventTime.compareTo(endTimeStr) <= 0;
                             })
-                    .collect(Collectors.toList());
+                    .toList();
 
         } catch (ResourceNotFoundException e) {
             log.error("DynamoDB table not found: {}", dynamoDbProperties.tableName(), e);
