@@ -6,7 +6,6 @@ import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.hibernate.Session;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.stereotype.Component;
@@ -27,7 +26,7 @@ public class DatabaseCleaner implements InitializingBean {
         tableNames =
                 entityManager.getMetamodel().getEntities().stream()
                         .map(e -> e.getName().replaceAll("([a-z])([A-Z])", "$1_$2").toLowerCase())
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
     public void execute() {
